# deepseek-cli

./: .env.example  .gitignore  README.md  deepseek_client.py  deepseek_tui.py  pyproject.toml  requirements.txt
deepseek_studio/: __init__.py  __main__.py  app.py  commands.py  constants.py  models.py
deepseek_studio/agent/: __init__.py  protocol.py  runner.py  tools.py
deepseek_studio/services/: __init__.py  client.py  pow.py  token_usage.py  tokens.py
deepseek_studio/ui/: __init__.py  layout.py  styles.py  widgets.py
